--- a/packages/vitepress-auto/package.json
+++ b/packages/vitepress-auto/package.json
@@ -32,10 +32,7 @@
   "author": "Richard-Zhang1019",
   "license": "ISC",
   "devDependencies": {
-    "@types/node": "^20.4.4",
     "fast-glob": "^3.3.1",
-    "lodash-es": "^4.17.21",
-    "tsup": "^7.1.0",
-    "typescript": "^5.1.6"
+    "lodash-es": "^4.17.21"
   }
 }
