--- a/package.json
+++ b/package.json
@@ -1,4 +1,5 @@
 {
+  "version": "1.0.1",
   "description": "Automatically generate sidebar",
   "license": "ISC",
   "packageManager": "pnpm@7.5.2",
