--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -37,6 +37,6 @@ jobs:
         run: pnpm run build
 
       - name: Publish to NPM
-        run: pnpm publish -r --filter vitepress-auto
+        run: pnpm publish -r --filter vitepress-auto --no-git-checks
         env:
           NODE_AUTH_TOKEN: ${{secrets.NPM_TOKEN}}
