--- a/playground/package.json
+++ b/playground/package.json
@@ -11,6 +11,7 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "node": "^20.5.0",
     "vitepress": "1.0.0-beta.6",
     "vitepress-auto": "workspace:*"
   }
